force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/SPEN_LP_Apparatus_Payment_Rate__c.object-meta.xml
<CustomObject>
    <label>Land &amp; Planning Apparatus Payment Rate</label>
    <nameField>
        <displayFormat>PR-{00000}</displayFormat>
        <label>Payment Rate</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Land &amp; Planning Apparatus Payment Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>