force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/fields/SPEN_Active__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>