force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/fields/SPEN_Contracting_Reference__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contracting_Reference__c</fullName>
    <label>Contracting Reference</label>
    <length>150</length>
    <type>Text</type>
</CustomField>