force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/fields/SPEN_Is_Tower__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Is_Tower__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Tower</label>
    <type>Checkbox</type>
</CustomField>