force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/fields/SPEN_Land_Planning_Apparatus__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Land_Planning_Apparatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Land &amp; Planning Apparatus</label>
    <referenceTo>SPEN_LP_Apparatus__c</referenceTo>
    <relationshipLabel>Land &amp; Planning Apparatus Payment Rates</relationshipLabel>
    <relationshipName>Land_Planning_Apparatus_Payment_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>