force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/fields/SPEN_Land_Type__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Land_Type__c</fullName>
    <label>Land Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPEN_LP_Land_Types</valueSetName>
    </valueSet>
</CustomField>