force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/fields/SPEN_Licence_Area__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Licence_Area__c</fullName>
    <label>Licence Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>SPM</fullName>
            </value>
            <value>
                <fullName>SPT</fullName>
            </value>
            <value>
                <fullName>SPM 132</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>