force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/fields/SPEN_Occupier_Cost_Per_Annum__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Occupier_Cost_Per_Annum__c</fullName>
    <label>Occupier Cost Per Annum</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>