force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/fields/SPEN_Occupier_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Occupier_SAP_Code__c</fullName>
    <label>Occupier SAP Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>