force-app/main/default/objects/SPEN_LP_Apparatus_Payment_Rate__c/listViews/All_SPD_Payment_Rates.listView-meta.xml
<ListView>
    <fullName>All_SPD_Payment_Rates</fullName>
    <columns>NAME</columns>
    <columns>SPEN_Contracting_Reference__c</columns>
    <columns>SPEN_Owner_Cost_Per_Annum__c</columns>
    <columns>SPEN_Owner_SAP_Code__c</columns>
    <columns>SPEN_Occupier_Cost_Per_Annum__c</columns>
    <columns>SPEN_Occupier_SAP_Code__c</columns>
    <columns>SPEN_Licence_Area__c</columns>
    <columns>SPEN_Land_Planning_Apparatus__c</columns>
    <columns>SPEN_Is_Pole__c</columns>
    <columns>SPEN_Is_Tower__c</columns>
    <columns>SPEN_Land_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPEN_Licence_Area__c</field>
        <operation>equals</operation>
        <value>SPD</value>
    </filters>
    <label>All SPD Payment Rates</label>
</ListView>